--- a/home/HomePage.html
+++ b/home/HomePage.html
@@ -2,173 +2,132 @@
 <html lang="en-gb">
 
 <head>
-  <meta name="description" content="catalogue and shopping website">
-  <!--helps search engines define what the purpose of the site is-->
-  <meta name="keywords" content="shopping, search, catalogue">
-  <meta charset="utf-8">
-  <!--defines correct character set-->
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!--ensures site will render correctly on all platforms, primarily mobile-->
+    <meta name="description" content="catalogue and shopping website">
+    <!--helps search engines define what the purpose of the site is-->
+    <meta name="keywords" content="shopping, search, catalogue">
+    <meta charset="utf-8">
+    <!--defines correct character set-->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!--ensures site will render correctly on all platforms, primarily mobile-->
 
-  <!--links to the Boostrap CDN-->
-  <link rel="stylesheet" href="../css/styles.css" />
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-  <!-- <script src="../js/data.js"></script> -->
-  <script src="../js/main.js"></script>
-  <script src="../js/lib/indexeddb.js"></script>
+    <!--links to the Boostrap CDN-->
+    <link rel="stylesheet" href="../css/styles.css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <script src="../js/main.js"></script>
+    <script src="../js/lib/indexeddb.js"></script>
 
 
-  <title>Catalogue Website</title>
-  <!--title of site-->
+    <title>Catalogue Website</title>
+    <!--title of site-->
 
 </head>
 
 <body>
-
-  <!--
-references 
-https://stackoverflow.com/questions/42635126/bootstrap-4-navbar-with-2-rows
-
-    https://getbootstrap.com/docs/4.0/components/navbar/
-
-    https://www.raymondcamden.com/2012/08/10/Searching-for-array-elements-in-IndexedDB
-
-    equality: == vs ===  see :  https://codeburst.io/javascript-double-equals-vs-triple-equals-61d4ce5a121a?gi=a7a512abed2a
-    cookies and js see : https://www.w3schools.com/js/js_cookies.asp
-
-
-    -->
-  <!--creates search bar form-->
-
-  <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-    <!--makes navbar dark and controls spacing of items-->
-    <a class="navbar-brand" href="../home/home.html">Logo</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
-      aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+    <!--creates search bar form-->
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+        <!--makes navbar dark and controls spacing of items-->
+        <a class="navbar-brand" href="../home/home.html">Logo</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNavDropdown">
-      <ul class="navbar-nav">
-        <!--defines type of navbar-->
-        <li class="nav-item active">
-          <div id="search" class="">
-            <form class="form-inline" action="../Search/results.html">
-              <input class="form-control mr-sm-2" type="text" placeholder="Search">
-              <button class="btn btn-success" type="submit">Search</button>
-            </form>
-          </div>
-        </li>
-        <li class="nav-item">
-          <!--link to home page (null and void on this page but better than an empty button)-->
-          <a class="nav-link" href="../home/HomePage.html">Home</a>
-        </li>
-        <li class="nav-item dropdown">
-          <!--creates dropdown-->
-          <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">Categories</a>
-          <!--name and type of dropdown-->
-          <div id="dropdown" class="dropdown-menu"></div>
-        </li>
-        <li class="nav-item">
-          <!--link to hot deals page-->
-          <a class="nav-link" href="../Hot Deals/deals.html">Hot Deals</a>
-        </li>
-        <li class="nav-item">
-          <!--link to store locator page-->
-          <a class="nav-link" href="../Map/EventList/EventList.html">Store Locator</a>
-        </li>
-        <li class="nav-item">
-          <!--link to contact page-->
-          <a class="nav-link" href="../Contact/contact.html">Contact</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" id="loginToggle">Login</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
-
-  <!--creates carousel-->
-  <div class="container mt-3">
-    <div id="myCarousel" class="carousel slide" data-ride="carousel">
-      <!-- Indicators -->
-      <ul class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-      </ul>
-
-      <!-- The slideshow -->
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <!--location of specific image with description for accessibility purposes and sizes-->
-          <img src="../images/mountain1.jpg" alt="Lake" width="550" height="250">
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+                <!--defines type of navbar-->
+                <li class="nav-item active">
+                    <div id="search" class="">
+                        <form class="form-inline" action="../Search/results.html">
+                            <input class="form-control mr-sm-2" type="text" placeholder="Search">
+                            <button class="btn btn-success" type="submit">Search</button>
+                        </form>
+                    </div>
+                </li>
+                <li class="nav-item">
+                    <!--link to home page (null and void on this page but better than an empty button)-->
+                    <a class="nav-link" href="../home/HomePage.html">Home</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <!--creates dropdown-->
+                    <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">Categories</a>
+                    <!--name and type of dropdown-->
+                    <div id="dropdown" class="dropdown-menu"></div>
+                </li>
+                <li class="nav-item">
+                    <!--link to hot deals page-->
+                    <a class="nav-link" href="../Hot Deals/deals.html">Hot Deals</a>
+                </li>
+                <li class="nav-item">
+                    <!--link to store locator page-->
+                    <a class="nav-link" href="../Map/EventList/EventList.html">Store Locator</a>
+                </li>
+                <li class="nav-item">
+                    <!--link to contact page-->
+                    <a class="nav-link" href="../Contact/contact.html">Contact</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" id="loginToggle">Login</a>
+                </li>
+            </ul>
         </div>
-        <div class="carousel-item">
-          <img src="../images/mountain2.jpg" alt="Canyon" width="550" height="250">
+    </nav>
+
+    <!--creates carousel-->
+    <div class="container mt-3">
+        <div id="myCarousel" class="carousel slide" data-ride="carousel">
+            <!-- Indicators -->
+            <ul class="carousel-indicators">
+                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                <li data-target="#myCarousel" data-slide-to="1"></li>
+                <li data-target="#myCarousel" data-slide-to="2"></li>
+            </ul>
+
+            <!-- The slideshow -->
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <!--location of specific image with description for accessibility purposes and sizes-->
+                    <img src="../images/mountain1.jpg" alt="Lake" width="550" height="250">
+                </div>
+                <div class="carousel-item">
+                    <img src="../images/mountain2.jpg" alt="Canyon" width="550" height="250">
+                </div>
+                <div class="carousel-item">
+                    <img src="../images/mountain3.jpg" alt="Alps" width="550" height="250">
+                </div>
+            </div>
+
+            <!-- Left and right controls -->
+            <a class="carousel-control-prev" href="#myCarousel" data-slide="prev">
+                <span class="carousel-control-prev-icon"></span>
+            </a>
+            <a class="carousel-control-next" href="#myCarousel" data-slide="next">
+                <span class="carousel-control-next-icon"></span>
+            </a>
         </div>
-        <div class="carousel-item">
-          <img src="../images/mountain3.jpg" alt="Alps" width="550" height="250">
+
+    </div>
+    <!--creates login form-->
+    <div id="login" class="container">
+        <div class="form-group">
+            <label for="email">Email:</label>
+            <input type="email" class="form-control" id="email" placeholder="Enter email" name="email" required>
+            <!--defines type of input, id, placeholder and requires user to make input-->
         </div>
-      </div>
-
-      <!-- Left and right controls -->
-      <a class="carousel-control-prev" href="#myCarousel" data-slide="prev">
-        <span class="carousel-control-prev-icon"></span>
-      </a>
-      <a class="carousel-control-next" href="#myCarousel" data-slide="next">
-        <span class="carousel-control-next-icon"></span>
-      </a>
+        <div class="form-group">
+            <label for="key">Password:</label>
+            <input type="password" class="form-control" id="key" placeholder="Enter password" name="key" encrypt="bcrypt" salt="abc..." rounds="4" required>
+            <!--defines type of input, id, placeholder and requires user to make input-->
+        </div>
+        <button type="submit" id="btnSubmitLogin" class="btn btn-primary">Submit</button>
+        <!--submit button-->
+        </form>
     </div>
 
-  </div>
-  <!--creates login form-->
-  <div id="login" class="container">
-    <!--<form action="../Login/login.html" id="loginForm"> -->
-    <div class="form-group">
-      <label for="email">Email:</label>
-      <input type="email" class="form-control" id="email" placeholder="Enter email" name="email" required>
-      <!--defines type of input, id, placeholder and requires user to make input-->
+    <!--defines footer-->
+    <div id="footer">
+        <footer>This is the footer</footer>
     </div>
-    <div class="form-group">
-      <label for="key">Password:</label>
-      <input type="password" class="form-control" id="key" placeholder="Enter password" name="key" encrypt="bcrypt"
-        salt="abc..." rounds="4" required>
-      <!--defines type of input, id, placeholder and requires user to make input-->
-    </div>
-    <button type="submit" id="btnSubmitLogin" class="btn btn-primary">Submit</button>
-    <!--submit button-->
-    </form>
-  </div>
-
-  <div class="container" id="Home">
-    Home div "page"
-  </div>
-  <div class="container" id="Categories">
-    categories "page"
-  </div>
-  <div class="container" id="HotDeals">
-    hot deals page
-  </div>
-  <div class="container" id="StoreLocator">
-    store locator page
-  </div>
-  <div class="container" id="Contact">
-    contact us details "page"
-  </div>
-  <div class="container" id="Admin">
-    Admin "page"
-  </div>
-
-
-
-
-  <!--defines footer-->
-  <div id="footer">
-    <footer>This is the footer</footer>
-  </div>
 
 </body>
 
